--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,13 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+# Dub presets
+.dub
+docs.json
+__dummy.html
+*.o
+*.obj
+
 # =========================
 # Operating System Files
 # =========================
@@ -41,3 +48,5 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+tensorflow.lib
+dub.selections.json
